correcting the comment

--- a/SGA_Apex_REST_API_WAR/WebContent/login.html
+++ b/SGA_Apex_REST_API_WAR/WebContent/login.html
@@ -1,4 +1,4 @@
-<!-- HTML Home Page for Apex SGA -->
+<!-- HTML Login Page for Apex SGA -->
 <html>
 <head>
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
