Minor typo correction

--- a/SGA_Apex_REST_API_WAR/WebContent/sga_login.html
+++ b/SGA_Apex_REST_API_WAR/WebContent/sga_login.html
@@ -42,7 +42,7 @@
                             <h1><strong>Team APEX</strong> Login Form</h1>
                             <div class="description">
                             	<p>
-	                            	This application is a <strong>Science Gateway-as-a-Service</strong> model that submits
+	                            	This application is a <strong>Science Gateway Software-as-a-Service</strong> model that submits
 	                            	and monitors high performance jobs on remote super-computers.
                             	</p>
                             </div>
