Download output API integration & fix URL error

--- a/SGA_Apex_REST_API_WAR/WebContent/index.html
+++ b/SGA_Apex_REST_API_WAR/WebContent/index.html
@@ -142,7 +142,7 @@
 						<h3 class="panel-title">Monitor A Job</h3>
 					</div>
 					<div class="panel-body">
-						<form action="">
+						<form id="monitorJob" action="">
 							<div class="form-group row col-xs-12">
 								<label for="jobIDM">Job ID</label>								
 								<input type="text" class="form-control" id="jobIDM" placeholder="Enter Job ID (eg: 1245132.m2)">
