--- a/SGA_Apex_REST_API_WAR/WebContent/index.html
+++ b/SGA_Apex_REST_API_WAR/WebContent/index.html
@@ -53,36 +53,37 @@
 					<div class="panel-body">
 						<form id="submitJob" action="">
 							<div class="form-group row col-xs-8">
-								<label for="jobName">Job Name</label> <input type="jobName"
+								<label for="jobName">Job Name</label> 
+								<input type="jobName"
 									class="form-control" id="jobName"
 									placeholder="Enter Job Name (eg: goshenoy-01)">
 							</div>
 							<!-- /form-group -->
 
 							<div class="form-group row col-xs-8">
-								<label for="numProc">Number of Processors</label> <input
-									type="numProc" class="form-control" id="numProc"
+								<label for="numProc">Number of Processors</label> 
+								<input type="numProc" class="form-control" id="numProc"
 									placeholder="Enter Number of Processors (eg: 16)">
 							</div>
 							<!-- /form-group -->
 
 							<div class="form-group row col-xs-8">
-								<label for="numNodes">Number of Nodes</label> <input
-									type="numNodes" class="form-control" id="numNodes"
+								<label for="numNodes">Number of Nodes</label> 
+								<input type="numNodes" class="form-control" id="numNodes"
 									placeholder="Enter Number of Nodes (eg: 2)">
 							</div>
 							<!-- /form-group -->
 
 							<div class="form-group row col-xs-8">
-								<label for="email">Email ID</label> <input type="email"
-									class="form-control" id="email"
+								<label for="email">Email ID</label> 
+								<input type="email" class="form-control" id="email"
 									placeholder="Enter Email ID (eg: abc@indiana.edu)">
 							</div>
 							<!-- /form-group -->
 
 							<div class="form-group row col-xs-8">
-								<label for="wallTime">Wall Time (hh:mm:ss)</label> <input
-									type="wallTime" class="form-control" id="wallTime"
+								<label for="wallTime">Wall Time (hh:mm:ss)</label>
+								<input type="wallTime" class="form-control" id="wallTime"
 									placeholder="Enter Wall-Time (eg: 30:00)">
 							</div>
 							<!-- /form-group -->
@@ -93,8 +94,8 @@
 								<p class="help-block">Coordinates velocities, molecular
 									topology and simulation parameters - pdb1y6l-EM-vacuum.tpr</p>
 
-								<label for="inputFile2">Coordinate-File (GROMACS)</label> <input
-									type="file" id="inputFile2">
+								<label for="inputFile2">Coordinate-File (GROMACS)</label>
+								<input type="file" id="inputFile2">
 								<p class="help-block">Trajectory Coordinates Molecular
 									Structure in Gromos87 format - pdb1y6l-EM-vacuum.gro</p>
 							</div>
@@ -102,8 +103,7 @@
 
 							<!-- buttons -->
 							<div class="form-group row col-xs-8">
-								<button type="submit" class="btn btn-success">Submit
-									Job</button>
+								<button type="submit" class="btn btn-success">Submit Job</button>
 								<button type="reset" class="btn btn-warning">Clear Form</button>
 							</div>
 						</form>
@@ -113,8 +113,8 @@
 						<div id=overlay style="visibility: hidden">
 							<table width=100% height=100%>
 								<tr>
-									<td style="text-align: center; vertical-align: middle;"><img
-										src="images/loading_image.gif"></img></td>
+									<td style="text-align: center; vertical-align: middle;">
+									<img src="images/loading_image.gif"></img></td>
 								</tr>
 							</table>
 						</div>
@@ -169,8 +169,7 @@
 
 							<!-- buttons -->
 							<div class="form-group row col-xs-8">
-								<button type="submit" class="btn btn-success">Monitor
-									Job</button>
+								<button type="submit" class="btn btn-success">Monitor Job</button>
 								<button type="reset" class="btn btn-warning">Clear Box</button>
 							</div>
 						</form>
@@ -195,8 +194,7 @@
 
 							<!-- buttons -->
 							<div class="form-group row col-xs-8">
-								<button type="submit" class="btn btn-success">Download
-									Output</button>
+								<button type="submit" class="btn btn-success">Download Output</button>
 								<button type="reset" class="btn btn-warning">Clear Box</button>
 							</div>
 						</form>
