--- a/SGA_Apex_REST_API_WAR/WebContent/job_status.html
+++ b/SGA_Apex_REST_API_WAR/WebContent/job_status.html
@@ -25,7 +25,7 @@
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="/SGA_Apex">Home</a></li>
-					<li><a href="#about">Our Team</a></li>
+					<li><a href="team.html">Our Team</a></li>
 					<li><a target="_blank"	href="https://github.com/airavata-courses/TeamApex/wiki">Project Wiki</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
