adding code to select machine and experiment

--- a/SGA_Apex_REST_API_WAR/WebContent/index.html
+++ b/SGA_Apex_REST_API_WAR/WebContent/index.html
@@ -92,6 +92,22 @@
 									required>
 							</div>
 							<!-- /form-group -->
+							
+							<div class="form-group row col-xs-8">
+								<label for="experiment">Select an experiment</label>
+								<select>
+								  <option value="gromacs">gromacs</option>
+								</select>
+							</div>
+							<!-- /form-group -->
+							<div class="form-group row col-xs-8">
+								<label for="machine">Select a machine</label>
+								<select>
+								  <option value="karst">Karst</option>
+								  <option value="bigred2">Big Red 2</option>
+								</select>
+							</div>
+							<!-- /form-group -->
 
 							<div class="form-group row col-xs-8">
 								<label for="inputFile1">Portable-Input-Binary-File (GROMACS)</label>
