UI changes for getting status of experiment

--- a/SGA_Apex_REST_API_WAR/WebContent/index.html
+++ b/SGA_Apex_REST_API_WAR/WebContent/index.html
@@ -189,6 +189,15 @@
 									required>
 							</div>
 							<!-- /form-group -->
+							
+							<div id="machineSelectMonitor" class="form-group row col-xs-8">
+								<label for="machineMonitor">Select a machine</label>
+								<select id="machineMonitor">
+								  <option value="karst01">Karst</option>
+								  <option value="bigred201">Big Red 2</option>
+								</select>
+							</div>
+							<!-- /form-group -->
 
 							<!-- buttons -->
 							<div class="form-group row col-xs-8">
