--- a/SGA_Apex_REST_API_WAR/WebContent/job_status.html
+++ b/SGA_Apex_REST_API_WAR/WebContent/job_status.html
@@ -18,7 +18,7 @@
 					<span class="icon-bar"></span> 
 					<span class="icon-bar"></span> 
 				</button>
-				<a class="navbar-brand" href="#">SGA Team-Apex</a>
+				<a class="navbar-brand" href="/SGA_Apex">SGA Team-Apex</a>
 			</div>
 			<!-- /navbar-header -->
 			
@@ -96,6 +96,15 @@
 							<div class="form-group row col-xs-12">
 								<label for="jobIDM">Job ID</label>								
 								<input type="text" class="form-control" id="jobIDM" placeholder="Enter Job ID (eg: 1245132.m2)">
+							</div>
+							<!-- /form-group -->
+							
+							<div id="machineSelectMonitor" class="form-group row col-xs-8">
+								<label for="machineMonitor">Select a machine</label>
+								<select id="machineMonitor">
+								  <option value="karst01">Karst</option>
+								  <option value="bigred201">Big Red 2</option>
+								</select>
 							</div>
 							<!-- /form-group -->
 							
