download output ui integration

--- a/SGA_Apex_REST_API_WAR/WebContent/index.html
+++ b/SGA_Apex_REST_API_WAR/WebContent/index.html
@@ -218,10 +218,19 @@
 					<div class="panel-body">
 						<form id="downloadOP" action="">
 							<div class="form-group row col-xs-12">
-								<label for="jobNameD">Job Name</label>
-								<input type="text" class="form-control" id="jobNameD"
-									placeholder="Enter Job Name (eg: goshenoy-01)"
+								<label for="jobIDD">Job ID</label>
+								<input type="text" class="form-control" id="jobIDD"
+									placeholder="Enter Job ID (eg: 1245132.m2)"
 									required>
+							</div>
+							<!-- /form-group -->
+							
+							<div id="machineSelectDownload" class="form-group row col-xs-8">
+								<label for="machineDownload">Select a machine</label>
+								<select id="machineDownload">
+								  <option value="karst01">Karst</option>
+								  <option value="bigred201">Big Red 2</option>
+								</select>
 							</div>
 							<!-- /form-group -->
 
@@ -251,6 +260,15 @@
 								<input type="text" class="form-control" id="jobIDC"
 									placeholder="Enter Job ID (eg: 1245132.m2)"
 									required>
+							</div>
+							<!-- /form-group -->
+							
+							<div id="machineSelectCancel" class="form-group row col-xs-8">
+								<label for="machineCancel">Select a machine</label>
+								<select id="machineCancel">
+								  <option value="karst01">Karst</option>
+								  <option value="bigred201">Big Red 2</option>
+								</select>
 							</div>
 							<!-- /form-group -->
 
