--- a/SGA_Apex_REST_API_WAR/WebContent/index.html
+++ b/SGA_Apex_REST_API_WAR/WebContent/index.html
@@ -28,6 +28,7 @@
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="/SGA_Apex">Home</a></li>
+					<li class="active"><a href="experiment-list.html">My Experiments</a></li>
 					<li><a href="team.html">Our Team</a></li>
 					<li><a target="_blank"
 						href="https://github.com/airavata-courses/TeamApex/wiki">Project
