--- a/SGA_Apex_REST_API_WAR/WebContent/job_status.html
+++ b/SGA_Apex_REST_API_WAR/WebContent/job_status.html
@@ -84,6 +84,26 @@
 					<!-- /panel-footer -->
 				</div>
 				<!-- panel -->
+				
+				<!-- Error Modal -->
+				<div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal"
+									aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+								<h4 class="modal-title" id="errorModalLabel">Error Occured</h4>
+							</div>
+							<div class="modal-body"></div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- /error-modal -->
 			</div>
 			<!-- /col-md-8 -->
 			
