--- a/SGA_Apex_UI_WEB/WebContent/index.html
+++ b/SGA_Apex_UI_WEB/WebContent/index.html
@@ -337,8 +337,11 @@
 	<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 
 	<!-- Bootstrap Javascript -->
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	
+	<!-- JStorage -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
+	<script src="assets/js/jstorage.js"></script>
 
 	<!-- Core logic scripts -->
 	<script src="js/sga_script.js"></script>
