--- a/SGA_Apex_UI_WEB/WebContent/sga_login.html
+++ b/SGA_Apex_UI_WEB/WebContent/sga_login.html
@@ -63,13 +63,13 @@
 			                    <form role="form" action="j_security_check" method="post" class="login-form">
 			                    	<div class="form-group">
 			                    		<label class="sr-only" for="form-username">Username</label>
-			                        	<input type="text" name="j_username" placeholder="Username..." class="form-username form-control" id="form-username">
+			                        	<input type="text" id="j_username" name="j_username" placeholder="Username..." class="form-username form-control" id="form-username">
 			                        </div>
 			                        <div class="form-group">
 			                        	<label class="sr-only" for="form-password">Password</label>
-			                        	<input type="password" name="j_password" placeholder="Password..." class="form-password form-control" id="form-password">
+			                        	<input type="password" id="j_password" name="j_password" placeholder="Password..." class="form-password form-control" id="form-password">
 			                        </div>
-			                        <button type="submit" class="btn btn-success">Sign in!</button>
+			                        <button id="loginBtn" type="submit" class="btn btn-success">Sign in!</button>
 			                        
 			                        <!-- register button -->
 									<button id="registerBtn" type="button" class="btn btn-warning">Register</button>
@@ -118,8 +118,12 @@
         <script src="assets/js/jquery-1.11.1.min.js"></script>
         <script src="assets/bootstrap/js/bootstrap.min.js"></script>
         <script src="assets/js/jquery.backstretch.min.js"></script>
-        <script src="assets/js/scripts.js"></script>
+        <script src="assets/js/scripts.js"></script>        
         
+        <!-- JStorage -->
+        <script src="//cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
+		<script src="assets/js/jstorage.js"></script>
+		
         <!--[if lt IE 10]>
             <script src="assets/js/placeholder.js"></script>
         <![endif]-->
