Fix CORS in UI micro-service

--- a/SGA_Apex_UI_WEB/WebContent/job_status.html
+++ b/SGA_Apex_UI_WEB/WebContent/job_status.html
@@ -249,6 +249,10 @@
 	<!-- Bootstrap Javascript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	
+	<!-- JStorage -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
+	<script src="assets/js/jstorage.js"></script>
+	
 	<!-- Core logic scripts -->
 	<script src="js/sga_script.js"></script>
 	<script src="js/main_script.js"></script>
