--- a/SGA_Apex_UI_WEB/WebContent/experiment_list.html
+++ b/SGA_Apex_UI_WEB/WebContent/experiment_list.html
@@ -131,6 +131,10 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="https://cdn.datatables.net/1.10.7/js/jquery.dataTables.min.js"></script>
 	<script src="https://cdn.datatables.net/plug-ins/1.10.7/integration/bootstrap/3/dataTables.bootstrap.js"></script>
+	
+	<!-- JStorage -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script>
+	<script src="assets/js/jstorage.js"></script>
 
 	<!-- Core logic scripts -->
 	<script src="js/sga_script.js"></script>
